[package]
name = "draw"
version = "0.1.0"
edition = "2018"
authors = ["Tilde35 <github@granitewood.com>"]

[dependencies]
image = "0.23.12"
nsvg = { version = "0.5.1", default-features = false }
rusttype = "0.8.0"
# unicode-normalization = "0.1.8"
serde = { version = "1.0", optional = true, features = ["serde_derive"] }

[features]
# default = ["serde"]
default = []
